# notes_cli

./: .gitignore  Cargo.toml  notes.db  notes.db.bak
src/: app.rs  editor_handler.rs  handler.rs  lib.rs  render.rs  repository.rs  service.rs  widgets.rs
