[package]
name = "smart_notes_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "fun note management cli tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
rusqlite = "0.31.0"
tempfile = "3.10.1"
